# supymem-kiro

./: .env.example  .gitignore  CHANGES_SUMMARY.md  ENHANCEMENTS.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KIRO_STYLE_DEVELOPMENT.md  MIGRATION_COMPLETE.md  PRODUCTION_CHECKLIST.md  README.md  alembic.ini  cli.py  docker-compose.services.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_slack_bot.py  run_workers.py
.kiro/: KIRO_STRUCTURE_COMPLETE.md
.kiro/specs/: design.md  requirements.md  tasks.md
.kiro/steering/: libraries.md  product.md  structure.md  tech.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
init-scripts/: 01-init.sql  02-seed-data.sql
scripts/: seed_data.py  seed_demo_data.py
src/: main.py
src/agents/: __init__.py  knowledge_agent.py  memory.py
src/api/: __init__.py  exceptions.py  middleware.py
src/cache/: __init__.py  advanced_cache.py  redis_client.py
src/config/: logging.py  settings.py
src/database/: __init__.py  models.py  session.py
src/llm/: client.py  enhanced_client.py
src/monitoring/: metrics.py
src/vectors/: __init__.py  embeddings.py  qdrant_client.py
src/workers/: __init__.py  base.py  change_processor.py  notification_worker.py  (+1 more)
tests/: __init__.py  conftest.py  test_analytics_debate_unit.py  test_api.py  test_automation_unit.py  test_classification_unit.py  test_impact_unit.py  test_services.py  test_workers.py
vscode-extension/: .eslintrc.json  .vscodeignore  CHANGELOG.md  DEMO_GUIDE.md  README.md  package-lock.json  package.json
(+128 files in other folders)
